data/derived/fa15/progs/unify/prog2177.ml.out
Characters 160-162:
  | 0 -> build (rand(), d-1)
                    ^^
Error: This expression has type unit but an expression was expected of type
         int * int
